--- a/_includes/page_header.html
+++ b/_includes/page_header.html
@@ -12,7 +12,7 @@
 			<a href="https://twitter.com/{{ site.texture.social_links.twitter }}"><li><i class="icon-twitter-squared"></i></li></a>
 		{%- endif -%}
 		{%- if site.texture.social_links.rss -%}
-			<a href="https://roald87.github.io/{{ site.texture.social_links.twitter }}.xml"><li><i class="icon-rss"></i></li></a>
+			<a href="https://roald87.github.io/{{ site.texture.social_links.rss }}.xml"><li><i class="icon-rss"></i></li></a>
 		{%- endif -%}
 	</ul>
 </div>
