--- a/_sass/ext/_fonts.scss
+++ b/_sass/ext/_fonts.scss
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?26793073');
-  src: url('../font/fontello.eot?26793073#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?26793073') format('woff2'),
-       url('../font/fontello.woff?26793073') format('woff'),
-       url('../font/fontello.ttf?26793073') format('truetype'),
-       url('../font/fontello.svg?26793073#fontello') format('svg');
+  src: url('../font/fontello.eot?75537334');
+  src: url('../font/fontello.eot?75537334#iefix') format('embedded-opentype'),
+       url('../font/fontello.svg?75537334#fontello') format('svg');
+       url('../font/fontello.woff2?75537334') format('woff2'),
+       url('../font/fontello.woff?75537334') format('woff'),
+       url('../font/fontello.ttf?75537334') format('truetype'),
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?26793073#fontello') format('svg');
+    src: url('../font/fontello.svg?75537334#fontello') format('svg');
   }
 }
 */
@@ -56,7 +56,7 @@
 }
  
 .icon-calendar:before { content: '\e800'; } /* '' */
+.icon-twitter:before { content: '\f099'; } /* '' */
 .icon-github-circled:before { content: '\f09b'; } /* '' */
-.icon-twitter-squared:before { content: '\f304'; } /* '' */
+.icon-rss-squared:before { content: '\f143'; } /* '' */
 .icon-linkedin-squared:before { content: '\f30c'; } /* '' */
-.icon-rss:before { content: '\f09e'; } /* '' */
