--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,6 +16,8 @@
           {{ content }}
       </div>
 
+      Found a mistake or a typo? <a href="https://github.com/Roald87/roald87.github.io/edit/main/{{ page.path }}">Suggest a change!</a>
+
         <!-- Configure Disqus -->
       {%- if site.texture.disqus_shortname -%}
         <div id="disqus_thread" style="margin-top:25px"></div>
